icecast/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: icecast
  labels:
    name: icecast
    pod-security.kubernetes.io/enforce: privileged #hostPath volumes
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/enforce-version: v1.28
    pod-security.kubernetes.io/audit-version: v1.28
    pod-security.kubernetes.io/warn-version: v1.28
