icecast/service.yml
apiVersion: v1
kind: Service
metadata:
  name: icecast-svc
  namespace: icecast
  labels:
    app: icecast
  annotations:
    "lbipam.cilium.io/sharing-key": "exposed-outside"
    "lbipam.cilium.io/ips": "192.168.86.22"
spec:
  type: LoadBalancer
  selector:
    app: icecast
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
