icecast/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: icecast
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - icecast.aarnihalinen.fi
      secretName: tls-secret
  rules:
    - host: icecast.aarnihalinen.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: icecast-svc
                port:
                  number: 80
